# mase-triton

./: .gitignore  README.md  grad_max_table.tex  grad_mean_table.tex  pyproject.toml  tox.ini  tox.toml
.github/workflows/: release.yaml
benchmark/: benchmark_morr_linear.py  benchmark_random_bitflip.py  morr_linear_backward.py  morr_linear_forward.py  profile_random_bitflip.py  unit_test.py
example/: mxfp_quantize_dequantize.py
src/mase_triton/: __init__.py  about.py  autotune.py  config.py  logging.py  random_bitflip.py
src/mase_triton/minifloat/: fake.py  layers.py  meta.py
src/mase_triton/minifloat/functional/: __init__.py  cast.py  linear.py  matmul.py
src/mase_triton/mxfp/: api.py  core.py  dtypes.py  fake.py  helpers.py  layers.py  meta.py  tensor.py
src/mase_triton/mxfp_ocp/: fake.py
src/mase_triton/optical_compute/: core.py  layers.py
src/mase_triton/random_bitflip/: core.py  layers.py  utils.py
src/mase_triton/scaled_int/: meta.py
src/mase_triton/utils/: bit_repr.py  constants.py  debug.py  torch_module.py
test/: test_int.py  test_minifloat_fake.py  test_minifloat_functional.py  test_minifloat_kernels.py  test_minifloat_layers.py  test_mxfp_api.py  test_mxfp_core.py  test_mxfp_fake.py  test_mxfp_functional.py  test_mxfp_kernels.py  test_mxfp_layers.py  test_mxfp_simple_fake.py  test_mxfp_simple_functional.py  test_mxfp_simple_kernels.py  test_mxfp_simple_layers.py  test_optical_compute_quantized_core.py  test_optical_compute_quantized_layers.py  test_random_bitflip.py  test_random_bitflip_core.py  test_random_bitflip_layers.py
(+20 files in other folders)
